--- a/.github/workflows/android-internal.yml
+++ b/.github/workflows/android-internal.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'yarn'
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -39,7 +39,7 @@ jobs:
           cache: 'gradle'
 
       - name: Install Node dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Decode Android keystore
         run: |
