feat: fixed workflow

--- a/.github/workflows/ios-testfligh.yml
+++ b/.github/workflows/ios-testfligh.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Build and deploy to TestFlight
         run: bundle exec fastlane ios beta
         env:
+          MATCH_GIT_URL: https://github.com/riad40/dexylab-ios-certificates.git
           APP_STORE_KEY_ID: ${{ secrets.APP_STORE_KEY_ID }}
           APP_STORE_ISSUER_ID: ${{ secrets.APP_STORE_ISSUER_ID }}
           APP_STORE_KEY_CONTENT: ${{ secrets.APP_STORE_KEY_CONTENT }}
