--- a/.github/workflows/ios-testfligh.yml
+++ b/.github/workflows/ios-testfligh.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-15
+    runs-on: macos-latest
     timeout-minutes: 60
 
     steps:
@@ -64,3 +64,8 @@ jobs:
         run: |
           rm -rf ~/Library/MobileDevice/Provisioning\ Profiles/*
           echo "✅ Cleaned up provisioning profiles"
+
+      - name: Clean signing leftovers
+        run: |
+          rm -rf ~/Library/MobileDevice/Provisioning\ Profiles/*
+          security delete-keychain ~/Library/Keychains/login.keychain-db || true
