--- a/.github/workflows/ios-testfligh.yml
+++ b/.github/workflows/ios-testfligh.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   deploy:
     runs-on: macos-latest
-    timeout-minutes: 60
+    timeout-minutes: 90
 
     steps:
       - name: Checkout repository
@@ -34,15 +34,25 @@ jobs:
       - name: Install Node dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Cache CocoaPods
+        uses: actions/cache@v4
+        with:
+          path: |
+            ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+
       - name: Install CocoaPods dependencies
         run: |
           cd ios
-          pod install
+          pod install --repo-update
 
       - name: Build and deploy to TestFlight
         run: bundle exec fastlane ios beta
         env:
-          MATCH_GIT_URL: https://github.com/riad40/dexylab-ios-certificates.git
           APP_STORE_KEY_ID: ${{ secrets.APP_STORE_KEY_ID }}
           APP_STORE_ISSUER_ID: ${{ secrets.APP_STORE_ISSUER_ID }}
           APP_STORE_KEY_CONTENT: ${{ secrets.APP_STORE_KEY_CONTENT }}
@@ -58,14 +68,3 @@ jobs:
             *.ipa
             fastlane/report.xml
           retention-days: 30
-
-      - name: Cleanup build artifacts
-        if: always()
-        run: |
-          rm -rf ~/Library/MobileDevice/Provisioning\ Profiles/*
-          echo "✅ Cleaned up provisioning profiles"
-
-      - name: Clean signing leftovers
-        run: |
-          rm -rf ~/Library/MobileDevice/Provisioning\ Profiles/*
-          security delete-keychain ~/Library/Keychains/login.keychain-db || true
